# generativeai-dev

./: README.md  pyproject.toml  ruff.toml
.chainlit/: config.toml
app/: app.py  chainlit_app.py  history_test.py  memory_test.py  rag.py
langgraph/: app.py  response_optimizer.py  single_path_plan_generator.py
ollama/: ollama_test.py  request_test.py
src/generativeai_dev/: __init__.py  app.py  streamlit_app.py
