[project]
name = "generativeai-dev"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "wellflat", email = "wellflat@gmail.com" }
]
dependencies = [
    "openai>=1.52.2",
    "langchain>=0.0.27",
    "chainlit>=0.5.1",
    "streamlit>=1.39.0",
    "python-dotenv>=1.0.1",
    "langchain-openai>=0.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "generativeai-dev:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/generativeai_dev"]
