[project]
name = "generativeai-dev"
version = "0.1.0"
description = "generative ai development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "openai>=1.54.4",
    "python-dotenv>=1.0.1",
    "chainlit>=1.3.2",
    "streamlit>=1.40.1",
]
