[project]
name = "generativeai-dev"
version = "0.1.0"
description = "generative ai development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "openai>=1.54.4",
    "python-dotenv>=1.0.1",
    "chainlit>=1.3.2",
    "tiktoken>=0.8.0",
    "git-python>=1.0.3",
    "langchain-community>=0.3.7",
    "dotenv-flow>=0.4.0",
    "langchain-chroma>=0.2.0",
    "langchain-redis>=0.1.2",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.2.73",
    "pygraphviz>=1.14",
    "pydantic-settings>=2.7.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
